# 2D-Traffic-Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: Building.hpp  City.hpp  Intersection.hpp  Passenger.hpp  Road.hpp  amounts.h  box.hpp  coordinates.h  input2json.hpp  json2city.hpp  map.h  matplotlibcpp.h  node.hpp  path.hpp  timeschedule.h  vehicle.h
src/: Building.cpp  Building.hpp  Intersection.cpp  Passenger.cpp  Road.cpp  box.cpp  input2json.cpp  input_file.txt  json2city.cpp  map.cpp  matplotlibcpp.h  node.cpp  path.cpp  traffic-simulator-main  traffic-simulator-main.cpp  vehicle.cpp
src/classes/: Building  Building.cpp  Building.hpp  City  City.cpp  City.hpp  Intersection  Intersection.cpp  Intersection.hpp  Passenger  Passenger.cpp  Passenger.hpp  Road  Road.cpp  Road.hpp  classes_playground  classes_playground.cpp
src/input_processing/: amounts.h  input2json  input2json.cpp  input_file.txt  json_playground  json_playground.cpp
